[package]
name = "axum-x402"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.7"
axum = "0.8.8"
dotenvy = "0.15.7"
http = "1.4.0"
tokio = { version = "1.50.0", features = ["full"] }
x402-axum = "1.4.3"
x402-chain-eip155 = { version = "1.4.3", features = ["server"] }
x402-types = "1.4.3"
